feat(architect): implement pagination in get all endpoin
